Fix action bar styling spacing. Don't show fulfill or contribute for dead bounties.

--- a/src/containers/Bounty/Bounty.module.scss
+++ b/src/containers/Bounty/Bounty.module.scss
@@ -168,10 +168,6 @@
   }
 }
 
-.buttonSection {
-  margin-bottom: $l-spacing;
-}
-
 .label {
   margin-bottom: $base-spacing;
 }
